--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+appnope==0.1.0
+decorator==4.0.10
 Django==1.10.1
 django-extensions==1.7.4
+ipdb==0.10.1
+ipython==5.1.0
+ipython-genutils==0.1.0
 numpy==1.11.1
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.7
+ptyprocess==0.5.1
 py==1.4.31
+Pygments==2.1.3
 pytest==3.0.2
 pytest-django==3.0.0
+simplegeneric==0.8.1
 six==1.10.0
+traitlets==4.3.0
+wcwidth==0.1.7
